# invae_torch_wandb

./: .gitignore  README.md  REPRODUCIBILITY.md  init_uv_project.sh  pyproject.toml  setup_dev_env.sh
data/: describe_h5ad.py  pancreas.summary.txt  visualize_raw_pancreas.py
examples/: PIPELINE_GUIDE.md  checkpoint_demo.py  example_notebook.ipynb  run_pipeline_example.py
src/homework_scientalab/: __init__.py  checkpoint.py  data.py  losses.py  model.py  muon_optimizer.py  pipeline.py  reproducibility.py  run_pipeline.py  train.py  trainer.py
src/homework_scientalab/config/: README.md  __init__.py  configs.py  data_config.yaml  loader.py  model_config.yaml  sweep_config.yaml  train_config.yaml
src/homework_scientalab/monitor_and_setup/: artifacts.py  checkpoint.py  reproducibility.py
src/homework_scientalab/sweep/: run_sweep.py  sweep_train.py
src/homework_scientalab/validation/: visualize_latent.py  visualize_train_val.py
tests/: test_checkpoint.py  test_data_prep.py  test_full_pipeline.py  test_pipeline_stage1.py  test_pipeline_stage2.py  test_pipeline_stage3.py  test_processing_and_split.py  test_raw_data.py  test_sweep_setup.py
validation_results/latent_vis/: metrics_report.md
