[project]
name = "homework_scientalab"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Ludovic Arnould", email = "" }]
dependencies = [
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "torch>=2.8.0",
    "scanpy>=1.10.0",
    "scikit-learn>=1.3.0",
    "tensorboard>=2.15.0",
    "pandas>=2.0.0",
    "certifi>=2023.0.0",
    "anndata>=0.12.2",
    "h5py>=3.14.0",
    "pytest>=8.4.2",
    "scikit-misc>=0.5.1",
    "wandb>=0.22.1",
    "scib>=1.1.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/homework_scientalab"]

[dependency-groups]
dev = [
  "ruff>=0.6",
  "pytest>=8",
]
